# shamon

compiler/: .gitignore  README.md  cfile_utils.py  lexer.py  main.py  monitor.c  old_parser.py  parser.py  parser_indices.py  tessla_utils.py  tokens.py  type_checker.py  utils.py
compiler/cfiles/: compiler_utils.c  compiler_utils.h  intmap.cpp  intmap.h  test.c
compiler/ply/: yacc.py
compiler/tests/: primes.txt  primes6.txt  primes6_2.txt  short_primes.txt  threads.txt  threads2.txt
experiments/: CMakeLists.txt  Makefile  funstest.c  gennums.c  gennums_hardcoded.c  interact.c  monitor-consume.c  monitor-drregex.c  monitor-entropy.c  monitor-fastbuf-io.c  monitor-generic.c  monitor-io.c  monitor-regex.c  monitor-shmbuf-funs.c  monitor-stdin.c  monitor.c  primes.sh  setup.sh  utils.c
experiments/bank/: Makefile  bank-1-128-100000.csv  bank-1-16-100000.csv  bank-1-256-100000.csv  bank-1-32-100000.csv  bank-1-4-100000.csv  bank-1-64-100000.csv  bank-16-128-100000.csv  bank-16-16-100000.csv  bank-16-256-100000.csv  bank-16-32-100000.csv  bank-16-4-100000.csv  bank-16-64-100000.csv  bank-32-128-100000.csv  bank-32-16-100000.csv  bank-32-256-100000.csv  bank-32-32-100000.csv  bank-32-4-100000.csv  bank-32-64-100000.csv  bank-8-128-100000.csv  bank-8-16-100000.csv  bank-8-256-100000.csv  bank-8-32-100000.csv  bank-8-4-100000.csv  bank-8-64-100000.csv  bank.c  bank.h  bank.tessla  bankalone.sh  bankmonerrors.sh  bankmonitor-tessla.vl  bankmonitor.vl  bankmonitor.vl.in  bankmonitor_tessla.vl.in  bankmontessla.c  banksimple.sh  client.c  common.h  experiments.sh  inputs.last.txt  (+17 more)
experiments/bank-tessla/: Makefile  bankmonitor-gen.vl.in  bankmonitor.vl.in  compile.sh  experiments.sh  regexbank.sh  run.sh
experiments/bank/old/: bankmonitored.sh  flatclient.c  monitor.c  regexbank.sh  smt.c  smt.h  smtmonerrors.sh  smtmonitor.c
experiments/dataraces/: Makefile  experiments.sh  harness.bc  monitor.cpp  monitor.h  monitor.txt  random-harness.py  run.py  simpletest.c  svcomp_atomic.bc
experiments/primes/: Makefile  README.md  avgcsv.py  experiments-tessla.sh  experiments.sh  gennums_hardcoded.c  measure.py  primes-2.c  primes-2.py  primes-align-tessla.txt.in  primes-align2-tessla.txt  primes-bad.c  primes.c  primes.ipynb  primes.java  primes.py  primes.txt.in  run-c.py  run-cpy.py  run-py.py  run-tessla.sh  run.py  run.sh  run_common.py  runprimes-bad.sh  runprimes-dr.sh  runprimes.sh  shm_prepare_programs.py  tessla-test.sh  times-man-2-1024-10000.csv  times-man-2-1024-20000.csv  times-man-2-1024-30000.csv  times-man-2-1024-40000.csv  times-man-2-128-10000.csv  times-man-2-128-20000.csv  times-man-2-128-30000.csv  times-man-2-128-40000.csv  times-man-2-2048-10000.csv  times-man-2-2048-20000.csv  times-man-2-2048-30000.csv  (+5 more)
experiments/primes/programs/: monitor_1024.c  monitor_128.c  monitor_16.c  monitor_4.c  primes_1024.txt  primes_128.txt  primes_16.txt  primes_4.txt
experiments/scalability/: Makefile  README.md  benchmark.c  experiments.sh  log.txt  measure.py  monitor.c  monitor.txt  monitor.txt.in  numbers-1-100000.csv  numbers-1-10000000.csv  numbers-16-100000.csv  numbers-32-100000.csv  numbers-8-100000.csv  numbers-8-10000000.csv  run.py  run.sh  run_common.py  source.c
experiments/tessla_compare/: bank.c  bank.vamos  bank_times.csv  primes.c  primes.vamos  primes_times.csv  times_bank.sh  times_primes.sh
experiments/tessla_compare/bank_tessla/src/: main.rs  monitor.rs
experiments/tessla_compare/gen_tessla_input/: bank.c  bank.in  bank.vamos  main.sh  primes.c  primes.in  primes.vamos  primes_bad.in
experiments/tessla_compare/primes_tessla/: Cargo.toml
experiments/tessla_compare/primes_tessla/src/: main.rs  monitor.rs
monitors/: CMakeLists.txt  monitor-consume.c  monitor-drregex.c  monitor-entropy.c  monitor-fastbuf-io.c  monitor-generic.c  monitor-io.c  monitor-regex.c  monitor-shmbuf-funs.c  monitor-stdin.c  monitors-utils.h  shm-interactive  utils.c
sources/: CMakeLists.txt  primes.txt  primes2.txt  regex-drrio-rw.c  regex-drrio.c  regex.c  runprimes.sh  sendaddr.c
sources/bcc/: syscall-write.py  syscalls.py
sources/bcc/bpf-core/: CMakeLists.txt  syswrite.bpf.c  syswrite.c  syswrite.h
sources/bpf/: Makefile  loader.c  program.bpf.c
sources/drfun/: calls.c  funs-inline.c  funs.c
sources/drregex/: CMakeLists.txt  README.md  regex-mt.c  regex.c
sources/drregexrw/: regexrw.c
sources/drsyscalls/: syscalls.c
sources/gen-regex/: gen.py
sources/legacy/bpf/: loader.c  program.bpf.c
sources/llvm/: CMakeLists.txt  RaceInstrumentation.cpp
sources/racetest/: compile.sh  simpletest.c
sources/tsan/: compile.py  compile.sh  test.c  tsan_impl.c
