add_executable(monitor-regex monitor-regex.c)
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR}/streams)
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR}/shmbuf)
target_link_libraries(monitor-regex PRIVATE shamon)
target_link_libraries(monitor-regex PRIVATE shamon-arbiter)
target_link_libraries(monitor-regex PRIVATE shamon-vector)
target_link_libraries(monitor-regex PRIVATE shamon-parallel-queue)
target_link_libraries(monitor-regex PRIVATE shamon-streams)
target_link_libraries(monitor-regex PRIVATE shamon-shmbuf)
target_link_libraries(monitor-regex PRIVATE -lpthread)

add_executable(gennums gennums.c)
target_compile_options(gennums PRIVATE -O3)
