add_executable(monitor-generic monitor-generic.c utils.c)
target_include_directories(monitor-generic PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(monitor-generic PRIVATE ${CMAKE_SOURCE_DIR}/streams)
target_include_directories(monitor-generic PRIVATE ${CMAKE_SOURCE_DIR}/shmbuf)
target_link_libraries(monitor-generic PRIVATE shamon-shamon shamon-monitor pthread)
if (IPO)
        set_property(TARGET monitor-generic PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

add_executable(monitor-regex monitor-regex.c utils.c)
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR}/streams)
target_include_directories(monitor-regex PRIVATE ${CMAKE_SOURCE_DIR}/shmbuf)
target_link_libraries(monitor-regex PRIVATE shamon-shamon shamon-monitor pthread)
if (IPO)
        set_property(TARGET monitor-regex PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

add_executable(monitor-drregex monitor-drregex.c utils.c)
target_include_directories(monitor-drregex PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(monitor-drregex PRIVATE ${CMAKE_SOURCE_DIR}/streams)
target_include_directories(monitor-drregex PRIVATE ${CMAKE_SOURCE_DIR}/shmbuf)
target_link_libraries(monitor-drregex PRIVATE shamon-shamon shamon-monitor pthread)
if (IPO)
        set_property(TARGET monitor-drregex PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

add_executable(monitor-consume monitor-consume.c utils.c)
target_include_directories(monitor-consume PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(monitor-consume PRIVATE ${CMAKE_SOURCE_DIR}/streams)
target_include_directories(monitor-consume PRIVATE ${CMAKE_SOURCE_DIR}/shmbuf)
target_link_libraries(monitor-consume PRIVATE shamon-monitor pthread)
target_compile_options(monitor-consume PRIVATE -g)
if (IPO)
        set_property(TARGET monitor-consume PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

