if (DYNAMORIO_SOURCES)
       add_subdirectory(drfun)
       add_subdirectory(drregex)
       add_subdirectory(drsyscalls)
endif()

add_executable(regex regex.c)
add_executable(regexd regex-drrio.c)
target_compile_definitions(regex PRIVATE -D_POSIX_C_SOURCE=200809L)
target_compile_definitions(regexd PRIVATE -D_POSIX_C_SOURCE=200809L)
target_include_directories(regex PRIVATE ${CMAKE_SOURCE_DIR})
target_include_directories(regexd PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(regex PRIVATE shamon-shmbuf shamon-signature)
target_link_libraries(regexd PRIVATE shamon-shmbuf shamon-signature shamon-fastbuf pthread)
if (IPO)
        set_property(TARGET regex PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
        set_property(TARGET regexd PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()
